// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Temporal.PlainTime > crossSerialize > scoped > supports Temporal.PlainTime 1`] = `"($R=>$R[0]=Temporal.PlainTime.from("12:34:56.789"))($R["example"])"`;

exports[`Temporal.PlainTime > crossSerialize > supports Temporal.PlainTime 1`] = `"$R[0]=Temporal.PlainTime.from("12:34:56.789")"`;

exports[`Temporal.PlainTime > crossSerializeAsync > scoped > supports Temporal.PlainTime 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=Temporal.PlainTime.from("12:34:56.789")))($R["example"])"`;

exports[`Temporal.PlainTime > crossSerializeAsync > supports Temporal.PlainTime 1`] = `"$R[0]=Promise.resolve($R[1]=Temporal.PlainTime.from("12:34:56.789"))"`;

exports[`Temporal.PlainTime > crossSerializeStream > scoped > supports Temporal.PlainTime 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`Temporal.PlainTime > crossSerializeStream > scoped > supports Temporal.PlainTime 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Temporal.PlainTime.from("12:34:56.789")))($R["example"])"
`;

exports[`Temporal.PlainTime > crossSerializeStream > supports Temporal.PlainTime 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`Temporal.PlainTime > crossSerializeStream > supports Temporal.PlainTime 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Temporal.PlainTime.from("12:34:56.789"))"
`;

exports[`Temporal.PlainTime > serialize > supports Temporal.PlainTime 1`] = `"Temporal.PlainTime.from("12:34:56.789")"`;

exports[`Temporal.PlainTime > serializeAsync > supports Temporal.PlainTime 1`] = `"Promise.resolve(Temporal.PlainTime.from("12:34:56.789"))"`;

exports[`Temporal.PlainTime > toCrossJSON > supports Temporal.PlainTime 1`] = `"{"t":36,"i":0,"s":"12:34:56.789","c":5}"`;

exports[`Temporal.PlainTime > toCrossJSONAsync > supports Temporal.PlainTime 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":36,"i":1,"s":"12:34:56.789","c":5}}"`;

exports[`Temporal.PlainTime > toCrossJSONStream > supports Temporal.PlainTime 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`Temporal.PlainTime > toCrossJSONStream > supports Temporal.PlainTime 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":36,"i":3,"s":"12:34:56.789","c":5}]}"`;

exports[`Temporal.PlainTime > toJSON > supports Temporal.PlainTime 1`] = `"{"t":{"t":36,"i":0,"s":"12:34:56.789","c":5},"f":127,"m":[]}"`;

exports[`Temporal.PlainTime > toJSONAsync > supports Temporal.PlainTime 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":36,"i":1,"s":"12:34:56.789","c":5}},"f":127,"m":[]}"`;
